adding the mobile first workflow

--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-query.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Front-End Mentor | Rest Countries API</title>
 </head>
 <body>
-    
+    <header>
+        <h1>where in the world?</h1>
+        <button id="btnDarkMode">
+            <i class="fa-regular fa-moon"></i>Dark Mode
+        </button>
+    </header>
+    <main>
+        <nav>
+            <div class="search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="search" name="search" id="field-search" placeholder="Search for a country...">
+            </div>
+            <div class="filter-container">
+                <button id="btnFilter">Filter by Region  <i class="fa-solid fa-angle-down"></i></button>
+                <nav>
+                    <a href="">África</a>
+                    <a href="">America</a>
+                    <a href="">Asia</a>
+                    <a href="">Europe</a>
+                    <a href="">Oceania</a>
+                </nav>
+            </div>
+        </nav>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
+        <i class="fa-solid fa-arrow-left-long"></i>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="script/index.js"></script>
 </body>
 </html>
