--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/media-query.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Front-End Mentor | Rest Countries API</title>
+    <i class="fa-solid fa-arrow-left-long"></i>
 </head>
 <body>
     <header>
@@ -26,24 +27,16 @@
             <div class="filter-container">
                 <button id="btnFilter">Filter by Region  <i class="fa-solid fa-angle-down"></i></button>
                 <nav>
-                    <a href="">África</a>
-                    <a href="">America</a>
-                    <a href="">Asia</a>
-                    <a href="">Europe</a>
-                    <a href="">Oceania</a>
+                    <a href="#">Africa</a>
+                    <a href="#">America</a>
+                    <a href="#">Asia</a>
+                    <a href="#">Europe</a>
+                    <a href="#">Oceania</a>
                 </nav>
             </div>
         </nav>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ad placeat cumque minus repellat quisquam mollitia tempore debitis sint, itaque fuga necessitatibus laboriosam, dolor doloribus omnis, voluptatem tenetur tempora.</p>
-        <i class="fa-solid fa-arrow-left-long"></i>
+        <section class="countries-cards">
+        </section>
     </main>
     <footer>
 
