adding the countrie info section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="styles/media-query.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Front-End Mentor | Rest Countries API</title>
-    <i class="fa-solid fa-arrow-left-long"></i>
 </head>
 <body>
     <header>
@@ -32,15 +31,15 @@
                     <a href="#">Asia</a>
                     <a href="#">Europe</a>
                     <a href="#">Oceania</a>
+                    <a href="#">All</a>
                 </nav>
             </div>
         </nav>
         <section class="countries-cards">
+            
         </section>
     </main>
-    <footer>
-
-    </footer>
     <script src="script/index.js"></script>
+    <script src="script/add-detail.js"></script>
 </body>
 </html>
